--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -138,16 +138,16 @@
     "caretaker": "*Person who is accompanying you",
     "occupation": "*Occupation",
     "residency": "*City of residence",
-    "participatedBefore": "*Have you participated to previous editions?",
+    "participatedBefore": "*Have you participated in previous editions?",
     "howDidYouFindOut": "*How did you find out about Atlantykron?",
     "pick5Courses": "*Pick 5 courses you will attend",
     "pickOption": "*Pick an option",
     "infoTax": "The participation fee and meals (lunch and dinner, priced at 60 RON per day) are included in this price. For minors (under 18), the meal package is mandatory. Meals will be provided from July 30th to August 4th.",
-    "howPay": "How do you choose to pay? Bank transfer benefits from a 20 lei discount.",
-    "bankDetails": "Detalii transfer bancar:",
+    "howPay": "How do you choose to pay? Bank transfers benefit from a 20 lei discount.",
+    "bankDetails": "Bank Transfer Details:",
     "bankAccount": "Account: RO78RNCB0116172543400001",
     "beneficiary": "Beneficiary: Asociaţia Atlantykron Topalu",
-    "transactionDetails": "Detalii Tranzacţie: Nume + Opţiunea aleasă (8/2 zile cu/fară masă)",
+    "transactionDetails": "Transaction Reference/Details: Name + The option you pick (8/2 days with/without meals)",
     "finalPrices": "* final prices for the bank transfer",
     "package1": "- 580 (8 days with meals included)",
     "package2": "- 270 (2 days with meals included)",
@@ -155,43 +155,38 @@
     "package4": "- 150 (2 days without meals included)",
     "dietaryPreferences": "*Dietary preferences",
     "finish": "Submit",
-    "rules1": "",
-    "rules2": "",
-    "rules3bold": "",
-    "rules3": "",
-    "rules4bold": "",
-    "rules4": "",
-    "rules5bold": "",
-    "rules5": "",
-    "rules6": "",
-    "rules6bold": "",
-    "rules6cont": "",
-    "rules7": "",
-    "rules7bold": "",
-    "rules7cont": "",
-    "rules8bold": "",
-    "rules8": "",
-    "rules9bold": "",
-    "rules9": "",
-    "rules10bold": "",
-    "rules10": "",
-    "rules11bold": "",
-    "rules11": "",
-    "rules12bold": "",
-    "rules12": "",
-    "rules13": "",
-    "rules14": "",
-    "rules15": "",
-    "rules16": "",
-    "rules17": "",
-    "rules18": "",
-    "rules18bold": "",
-    "rules18cont": "",
-    "rules19bold": "",
-    "rules19cont": "",
-    "rules20": "",
-    "rules20link": "",
-    "rules20cont": "",
-    "rules21": "",
-    "rules22": ""
+    "rules1": " The Atlantykron Summer Academy aims to provide participants with a unique experience throughout the entire event. It offers a beautiful harmony with the natural environment, outdoor courses and workshops conducted by professionals who excel in their fields. ",
+    "rules2": " In order for these things to be possible, it is necessary for all participants to adhere to a minimum set of rules, both to maintain a pleasant atmosphere and to ensure the safe conduct of the activities. Therefore, for participation in the Academy, all participants commit to the following: ",
+    "rules3bold": "to pre-registe",
+    "rules3": "to register in advance using the form on the website. Only those who have completed the form will be able to participate. (In exceptional cases, participants may be allowed to register after the deadline, but their admission to the Academy is still subject to program acceptance.); ",
+    "rules4bold": "to complete all the registration formalities",
+    "rules4": "– to be present on the first day at Cernavoda for the meeting with the registration team or to contact the registration team as soon as possible upon arrival on the island; ",
+    "rules5bold": "to always visiblyt wear the bracelet",
+    "rules5": "received upon arrival at the island for the whole duration of the Academy; ",
+    "rules6": "to maintain an ",
+    "rules6bold": "appropriate behavior towards instructors, guests, and organizers, ",
+    "rules6cont": "understanding that all instructors, guests, and the entire organizing team volunteer their time and effort for the smooth running of the Academy; ",
+    "rules7": "to maintain a respectful attitude",
+    "rules7bold": " towards all other participants. ",
+    "rules7cont": "to maintain the cleanliness across the entire area of the island",
+    "rules8bold": "to follow all guidance ",
+    "rules8": "received from the organizers; ",
+    "rules9bold": "to swim and build campfires only when given permission by the organizers; ",
+    "rules9": "and only in the designated places; ",
+    "rules10bold": "to not to use or install unauthorized electrical installations ",
+    "rules10": "(for charging phones or other devices, special charging points will be set up); ",
+    "rules11bold": "to use the internet network responsibly and judiciously ",
+    "rules11": "to use the provided internet network and to follow the instructions given in this regard; ",
+    "rules12bold": "to not to organize independent activities after dark; ",
+    "rules12": "to not introduce alcoholic drinks on the island; ",
+    "rules13": "to not bring or consume prohibited substances, narcotics, or hallucinogens on the island.",
+    "rules14": "*Non-compliance will result in notifying the authorities and taking necessary legal measures.",
+    "rules15": "The organizers reserve the right to exclude any person from the Academy without providing explanations. The set of rules mentioned earlier is a minimum requirement. ",
+    "rules16": "The Academy is aimed at young people between the ages of 16 and 29.",
+    "rules19bold": "Participants under the age of 18 ",
+    "rules19cont": "must upon arrival on the island: ",
+    "rules20": "present",
+    "rules20link": "the letter of consent",
+    "rules20cont": "from the parents or legal guardian (if not accompanied by a parent or guardian). ",
+    "rules21": "to fully pay for the meal vouchers for the entire duration of the event. "
 }
