--- a/src/assets/localization/ro.json
+++ b/src/assets/localization/ro.json
@@ -182,15 +182,10 @@
     "rules14": "*Nerespectarea atrage după sine notificarea autorităților și măsurile care se impun confor legii.",
     "rules15": "Organizatorii își rezervă dreptul de a exclude din cadrul Academiei orice persoană, fără a oferi explicații. Setul de reguli anterior este unul minimal. ",
     "rules16": "Academia se adreseaza tinerilor cu vârsta între 16 și 29 de ani. ",
-    "rules17": "",
-    "rules18": "",
-    "rules18bold": "",
-    "rules18cont": "",
     "rules19bold": "Participanții cu vârsta sub 18 ani, ",
     "rules19cont": "trebuie ca la înregistrare: ",
     "rules20": "să prezinte",
     "rules20link": "scrisoarea de consimțământ",
     "rules20cont": "din partea părinților sau a tutorelui legal (daca nu sunt insotiti de parinte sau tutore). ",
-    "rules21": " să achite integral bonurile de masă, pentru întreaga perioadă a evenimentului. ",
-    "rules22": "     Vom afișa în curând propunerea de meniu din partea furnizorului nostru. Costul estimativ al mesei pentru 6 zile este de 360 lei. "
+    "rules21": " să achite integral bonurile de masă, pentru întreaga perioadă a evenimentului. "
 }   
