--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -7,7 +7,7 @@
     "conferences": "Conferences",
     "instructors": "Instructors",
     "partners": "Partners",
-    "organizers": "Organizatori",
+    "organizers": "Organizers",
     "signUp": "Sign Up",
     "whatIsAtlantykron": "What's Atlantykron?",
     "shortDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero",
@@ -26,7 +26,7 @@
     "presidentOfTheCenterForPeace": "President of the UNESCO Center for Peace",
     "worldGenesisFoundationFounder": "World Genesis Foundation Founder",
     "presidentOfTheCenterForComplexStudies": "President of the Center for Complex Studies",
-    "scienctistAtNASA": "Scientist at NASA JPL", 
+    "scienctistAtNASA": "Scientist at NASA JPL",
     "authorOfFizicaPovestita": "Author \"Fizica Povestită\" (Physics through Stories)",
     "typicalDay": "A typical day in an atypical camp",
     "typicalDayDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
@@ -38,6 +38,7 @@
     "officialPartners": "Official Partners",
     "organizedBy": "An event organized and supported by",
     "privacyPolicy": "Privacy Policy",
+    "termsAndConditions": "Terms of Use",
     "copyright": "© Copyright Atlantykron 2023 – All rights reserved",
     "selectYear": "Select year",
     "organizingNGOs": "Organizing NGOs",
