--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -27,6 +27,11 @@
     "worldGenesisFoundationFounder": "World Genesis Foundation Founder",
     "presidentOfTheCenterForComplexStudies": "President of the Center for Complex Studies",
     "scienctistAtNASA": "Scientist at NASA JPL",
+    "Agenții Guvernamentale": "Government Agencies",
+    "Parteneri Oficiali": "Official Partners",
+    "Susținători": "Sponsors",
+    "Parteneri Media": "Media Partners",
+    "ONG-uri Organizatoare": "Organizing NGOs",
     "authorOfFizicaPovestita": "Author \"Fizica Povestită\" (Physics through Stories)",
     "typicalDay": "A typical day in an atypical camp",
     "typicalDayDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
@@ -45,7 +50,7 @@
     "governmentAgencies": "Government Agencies",
     "sponsors": "Sponsors",
     "mediaPartners": "Media Partners",
-    "organizigTeam": "The organizing team is offering its time voluntarily to ensure you have an enjoyable experience while participating in the Academy",
+    "organizigTeam": "The team is offering its time voluntarily to ensure you have an enjoyable experience while participating in the Academy.",
     "yourEmail": "*Your e-mail address",
     "message": "*Message",
     "send": "Send",
@@ -80,6 +85,7 @@
     "registrationAgreement": "*By signing up you agree with our",
     "registerError": "E-mail address is wrong or the password does not meet the required criteria",
     "selectStep": "Select Step",
+    "typeOfConference": "Type of Conference: ",
     "logisticsDirector": "Logistics Director",
     "logisticsDirectorDescription": "The maintenance of installations, security, and various operations for hundreds of guests are not easy tasks, but Cristian and his team make them seem as simple as a walk on the island on a warm summer day.",
     "coastGuard": "Coast Guard",
