--- a/src/assets/localization/ro.json
+++ b/src/assets/localization/ro.json
@@ -35,6 +35,7 @@
     "goToGuide": "Ghid Participare",
     "gallery": "Galerie",
     "location": "Locația",
+    "typeOfConference": "Tipul Conferinței: ",
     "officialPartners": "Parteneri Oficiali",
     "organizedBy": "Un eveniment organizat și sprijinit de către",
     "privacyPolicy": "Politică de Confidențialitate",
@@ -43,6 +44,11 @@
     "selectYear": "Selectați anul",
     "organizingNGOs": "ONG-uri Organizatoare",
     "governmentAgencies": "Agenții Guvernamentale",
+    "Agenții Guvernamentale": "Agenții Guvernamentale",
+    "Parteneri Oficiali": "Parteneri oficiali",
+    "Susținători": "Susținători",
+    "Parteneri Media": "Parteneri Media",
+    "ONG-uri Organizatoare": "ONG-uri Organizatoare",
     "sponsors": "Susținători",
     "mediaPartners": "Parteneri Media",
     "organizigTeam": "Echipa de organizare iși oferă timpul și efortul în mod voluntar pentru a-ți asigura o experientă cât mai placută în cadrul Academiei.",
