various bugfixes added content

--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -1,6 +1,7 @@
 {
     "callToAction": "Join the Adventure",
-    "editionNumber": "35th Edition",
+    "editionNumber": "34th Edition",
+    "dates": "28 Iulie - 4 August 2023",
     "home": "Home",
     "guests": "Guests",
     "courses": "Courses",
@@ -10,17 +11,17 @@
     "organizers": "Organizers",
     "signUp": "Sign Up",
     "whatIsAtlantykron": "What's Atlantykron?",
-    "shortDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero",
+    "shortDescription": "Atlantykron is an educational and unconventional summer camp. Since 1989 \"Stone Ring Island\" transforms into a special and almost magical place for a few days every summer. Hundreds of young people and professors from all over the world gather on the island. During this time, the participants meet, interact and learn alongside scientists, artists, writers and other famous professionals. The Academy continues to change the lives of its participants.",
     "science": "Science",
-    "scienceDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "scienceDescription": "From face to face discussions with astronauts to treasure hunts using radios, the camp offers unique opportunities for all ages",
     "art": "Art",
-    "artDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "artDescription": "Express yourself creatively and explore the artistic medium in a captivating way!",
     "culture": "Culture",
-    "cultureDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "cultureDescription": "Science Fiction, campfire and multicultural experiences. The atmosfere is unique",
     "sport": "Sport",
-    "sportDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "sportDescription": "Have you ever had the chance to jump into a kayak after some yoga?",
     "seeAllCourses": "See all courses",
-    "guestsShowcase": " Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero",
+    "guestsShowcase": "Every year, the island gathers people with extraordinary life stories. The diversity of domains in which they have excelled is only equalled by their openess. We invite you to meet our guests.",
     "seeAllGuests": "See all guests",
     "firstRomanianCosmonaut": "First Romanian Cosmonaut",
     "presidentOfTheCenterForPeace": "President of the UNESCO Center for Peace",
@@ -34,9 +35,9 @@
     "ONG-uri Organizatoare": "Organizing NGOs",
     "authorOfFizicaPovestita": "Author \"Fizica Povestită\" (Physics through Stories)",
     "typicalDay": "A typical day in an atypical camp",
-    "typicalDayDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "typicalDayDescription": "After breakfast, the morning programs start, which can be anything from a conference on quantum physics to pottery. After that, all participants spend their free time on the beach, reading, learning, practicing sports or just chatting with friends. In the mid-afternoon, the programs resume and last until dinner, followed by presentations and performances in the open-air amphitheater. The evening program also includes a review of the events for the following day and is usually followed by a movie, astronomical observations or a campfire.",
     "findOutMore": "Find out more",
-    "participationGuide": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "participationGuide": "Before you sign up it is extremely important to read our guides, these contains logistical information and the rules of the Academy.",
     "goToGuide": "Participation Guide",
     "gallery": "Gallery",
     "location": "Location",
