--- a/src/assets/localization/ro.json
+++ b/src/assets/localization/ro.json
@@ -1,6 +1,7 @@
 {
     "callToAction": "Înscrie-te în Aventură",
-    "editionNumber": "Ediția 35",
+    "editionNumber": "Ediția 34",
+    "dates": "28 Iulie - 4 August 2023",
     "home": "Acasă",
     "guests": "Invitați",
     "courses": "Cursuri",
@@ -10,28 +11,28 @@
     "organizers": "Organizatori",
     "signUp": "Înscrieri",
     "whatIsAtlantykron": "Ce este Atlantykron?",
-    "shortDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero",
+    "shortDescription": "Atlantykron este o tabără de vară educațională și neconvențională. Din 1989 insula Inelul de Piatră se transformă într-un loc special și aproape magic timp de câteva zile în fiecare vară. Pe insulă vin sute de tineri și profesori din întreaga lume. În aceste zile, participanții se întâlnesc, interacționează și învață împreună cu oameni de știință, artiști, scriitori și alți profesioniști faimoși. Academia continuă să schimbe viețile participanților.",
     "science": "Știință",
-    "scienceDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "scienceDescription": "De la discuții față în față cu astronauți până la vânători de comori cu seturi radio, tabăra oferă oportunități unice pentru toate vârstele",
     "art": "Artă",
-    "artDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "artDescription": "Exprimă-te creativ și explorează mediul artistic într-un mod captivant!",
     "culture": "Cultură",
-    "cultureDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "cultureDescription": "Science Fiction, focuri de tabăra și experiențe multiculturale. Atmosfera este unică",
     "sport": "Sport",
-    "sportDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "sportDescription": "Ai mai avut vreodată șansa să urci intr-un kayak după ce ai făcut yoga?",
     "seeAllCourses": "Vezi toate cursurile",
-    "guestsShowcase": " Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero",
+    "guestsShowcase": "An de an, insula adună persoane cu povești de viață extraordinare. Diversitatea domeniilor în care au devenit lideri este egalată doar de cât de deschise sunt acestea. Te invităm să faci cunoștință cu invitații noștri.",
     "seeAllGuests": "Vezi toți invitații",
     "firstRomanianCosmonaut": "Primul Cosmonaut Român",
-    "presidentOfTheCertainForPeace": "Președinte Centrul Pentru Pace Unesco",
+    "presidentOfTheCenterForPeace": "Președinte Centrul Pentru Pace Unesco",
     "worldGenesisFoundationFounder": "Fondatoare World Genesis Foundation",
     "presidentOfTheCenterForComplexStudies": "Președinte Centrul de Studii Complexe",
     "scienctistAtNASA": "Om de Știință NASA Jet Propulsion Laboratory",
     "authorOfFizicaPovestita": "Autor \"Fizica Povestită\"",
     "typicalDay": "O zi tipică într-o tabără atipică",
-    "typicalDayDescription": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "typicalDayDescription": "După micul dejun încep programele de dimineaţă, care pot fi orice curs ales de participant de la conferințe pe baza fizicii cuantice la ceramică. După aceea toţi participanţii îşi petrec timpul liber pe plajă, citind, învăţând, practicând sporturi sau doar vorbind cu prietenii. La mijlocul după-amiezii reîncep programele, care ţin până la cină, apoi au loc prezentările şi spectacolele în amfiteatrul în aer liber. Programul de seară mai include o trecere în revistă a evenimentelor zilei următoare şi este urmat de obicei de un film, observații astronomice sau foc de tabără.",
     "findOutMore": "Află Mai Multe",
-    "participationGuide": "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor",
+    "participationGuide": "Înainte de a te înscrie este extrem de important să citești ghidul nostru, acesta include informații logistice cât și regulile Academiei.",
     "goToGuide": "Ghid Participare",
     "gallery": "Galerie",
     "location": "Locația",
